# cte

./: .gitignore  Cargo.toml  README.md  results.csv  setup.sh
migrations/: 20251206085704_schema.sql  20251206085705_sync_log.sql  20251209104647_ratings.sql
src/: database.rs  domain.rs  engine.rs  espn.rs  main.rs  tui.rs
src/database/: entities.rs  schema.rs
src/database/entities/: fight.rs  fight_stats.rs  fighter.rs  rating.rs
src/domain/: event.rs  fight.rs  fighter.rs  rating.rs
src/engine/: backtest.rs  calculator.rs  config.rs  dto.rs  espn.rs  metrics.rs  optimizer.rs  predictions.rs  sync.rs
src/espn/: dto.rs
src/espn/dto/: events.rs  fight_card.rs
src/tui/: app.rs  ui.rs
tests/: database_tests.rs
