[package]
name = "cte"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "time"] }
time = { version = "0.3.44", features = ["serde"] }
tokio = { version = "1.48.0", features = ["full"] }
